[package]
name = "patchouli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
lazy_static = "1.4"
regex = "1.7"
color-eyre = "0.6"
tempfile = "3.4"
