[package]
name = "patchouli"
version = "0.1.0"
edition = "2021"
authors = ["Marie Ramlow <me@nycode.dev>"]
description = "Lightweight CLI tool for maintaing patch based forks inspired by PaperMC's paperweight"
keywords = ["patch", "git", "cli"]
homepage = "https://github.com/NyCodeGHG/patchouli"
repository = "https://github.com/NyCodeGHG/patchouli"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.7"
lazy_static = "1.4"
regex = "1.7"
color-eyre = "0.6"
tempfile = "3.4"
